--- a/docker/Image2SVG Generation Example.ipynb
+++ b/docker/Image2SVG Generation Example.ipynb
@@ -13,12 +13,14 @@
     "import torch\n",
     "\n",
     "model_name = \"starvector/starvector-1b-im2svg\"\n",
-    "#model_name = \"starvector/starvector-8b-im2svg\"\n",
+    "# model_name = \"starvector/starvector-8b-im2svg\"\n",
     "\n",
-    "starvector = StarVectorForCausalLM.from_pretrained(model_name, torch_dtype=torch.float16)\n",
+    "starvector = StarVectorForCausalLM.from_pretrained(\n",
+    "    model_name, torch_dtype=torch.float16\n",
+    ")\n",
     "\n",
     "starvector.cuda()\n",
-    "starvector.eval()\n"
+    "starvector.eval()"
    ]
   },
   {
@@ -28,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_pil = Image.open('../assets/examples/sample-18.png')\n",
+    "image_pil = Image.open(\"../assets/examples/sample-18.png\")\n",
     "\n",
     "image = starvector.process_images([image_pil])[0].cuda()\n",
     "batch = {\"image\": image}\n",
